--- a/_includes/dc/syllabus.html
+++ b/_includes/dc/syllabus.html
@@ -1,6 +1,6 @@
 
  
-  
+<div>  
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
     <ul>
@@ -12,20 +12,7 @@
     </ul>
   </div>
  
-  <!--
-  <div class="col-md-6">
-    <h3 id="syllabus-matlab">Programming in MATLAB</h3>
-    <ul>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li><a href="{{site.swc_pages}}/matlab-novice-inflammation/reference">Reference...</a></li>
-     </ul>
-   </div>
-   -->
-</div>
+  
 
 
   <div class="col-md-6">
