--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -6,7 +6,7 @@
 	<td>Before starting</td>
 	<td><a href="{{ site.dc_pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
-      <tr><td>Morning</td> <td> <a href="http://www.datacarpentry.org/spreadsheets-socialsci/>Data organization in spreadsheets</a></td></tr>
+      <tr><td>Morning</td> <td> <a href="http://www.datacarpentry.org/spreadsheets-socialsci/">Data organization in spreadsheets</a></td></tr>
       <tr><td>Afternoon</td><td><a href="http://www.datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
       <tr> <td>Evening</td> <td>END</td> </tr>
     </table>
