--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -4,7 +4,7 @@
     <table class="table table-striped">
       <tr>
 	<td>Before starting</td>
-	<td><a href="{{ site.dc_pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+	<td><a href="https://www.surveymonkey.com/r/dcpreworkshopassessment?workshop_id=2018-07-04-otago-dc" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr><td>Morning</td> <td> <a href="http://www.datacarpentry.org/spreadsheets-socialsci/">Data organization in spreadsheets</a></td></tr>
       <tr><td>Afternoon</td><td><a href="http://www.datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
