--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -18,7 +18,7 @@
       <tr> <td>Afternoon</td><td><a href="http://www.datacarpentry.org/sql-socialsci/">Data management with SQL</a></td></tr>
       <tr>
 	<td>Evening</td>
-	<td><a href="{{ site.dc_post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
+	<td><a href="https://www.surveymonkey.com/r/dcpostworkshopassessment?workshop_id=2018-07-04-otago-dc">Post-workshop survey</a></td>
       </tr>
       <tr>
 	<td> </td>
