--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -15,7 +15,7 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td> <td><a href="http://www.datacarpentry.org/r-socialsci/">Continuation of R: data analysis & visualization</a></td></tr>
-      <tr> <td>Afternoon</td><td><a href="http://www.datacarpentry.org/sql-socialsci/">Data management with SQL</a></td></tr>
+      <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/sql-ecology-lesson/">Data management with SQL</a></td></tr>
       <tr>
 	<td>Evening</td>
 	<td><a href="https://www.surveymonkey.com/r/dcpostworkshopassessment?workshop_id=2018-07-04-otago-dc">Post-workshop survey</a></td>
